--- a/actvlp/evaluate/config/kill/base.yaml
+++ b/actvlp/evaluate/config/kill/base.yaml
@@ -6,6 +6,7 @@ start_time: 0
 time_limit: 1000
 candidate_preferred_spawn_biome: 
   - plains
+preferred_spawn_biome: "plains"
 candidate_weather: 
   - clear
 
@@ -23,11 +24,11 @@ need_gui: False
 inventory_distraction_level: "zero"
 
 task_conf:
-  - name: "craft"
-    text: "craft item" 
+  - name: "mine"
+    text: "mine item" 
+
+mobs: []
+init_inventory: []
 
 worker:
-  "craft"
-
-init_inventory: []
-mobs: []
+  "mine"
