--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ attrs==24.3.0
 av==14.1.0
 datasets
 deepspeed==0.16.3
-flash-attn==2.7.2.post1
+#flash-attn==2.7.2.post1
 huggingface-hub==0.28.1
 hydra-core
 numpy==1.26.4
@@ -19,9 +19,9 @@ ray
 rich
 sentencepiece==0.2.0
 tokenizers==0.21.0
-torch==2.5.1+cu121
-torchaudio==2.5.1
-torchvision==0.20.1
+torch
+torchaudio
+torchvision
 tqdm
 transformers
 trl
