--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,31 @@
-minestudio
 accelerate==1.2.1
 attrs==24.3.0
-av==14.1.0
-datasets
+av==13.1.0
+datasets==3.5.0
 deepspeed==0.16.3
-#flash-attn==2.7.2.post1
-huggingface-hub==0.28.1
-hydra-core
+fsspec==2024.12.0
+gcsfs==2024.12.0
+huggingface-hub>=0.30.0,<1.0
+hydra-core==1.3.2
+minestudio==1.1.3
 numpy==1.26.4
-nvitop
-omegaconf
-openai
-opencv-python
-opencv-python-headless
+nvitop==1.5.0
+omegaconf==2.3.0
+openai==1.76.0
+opencv-python==4.8.0.74
+opencv-python-headless==4.8.0.74
 peft==0.14.0
 pillow==10.4.0
-qwen-vl-utils
-ray
-rich
+qwen-vl-utils==0.0.11
+ray==2.40.0
+rich==14.0.0
 sentencepiece==0.2.0
 tokenizers==0.21.0
-torch
-torchaudio
-torchvision
-tqdm
-transformers
-trl
-vllm
-wandb
-gcsfs==2024.12.0
-fsspec==2024.12.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tqdm==4.67.1
+transformers==4.51.3
+trl==0.17.0
+vllm==0.7.3
+wandb==0.19.10
